--- a/index.css
+++ b/index.css
@@ -10,6 +10,18 @@ body {
     @apply bg-neutral-950
 }
 
+.px {
+    @apply px-2 md:px-16 lg:px-32
+}
+
+.py {
+    @apply py-6 lg:py-10
+}
+
+.max-w {
+    @apply max-w-[1380px] mx-auto
+}
+
 /* navbar */
 .nav-logo-name {
     @apply self-center text-lg md:text-xl lg:text-2xl font-semibold whitespace-nowrap text-white
