--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -562,10 +562,6 @@ video {
   position: relative;
 }
 
-.-left-20 {
-  left: -5rem;
-}
-
 .-left-28 {
   left: -7rem;
 }
@@ -578,12 +574,20 @@ video {
   left: -12rem;
 }
 
+.-top-10 {
+  top: -2.5rem;
+}
+
 .-top-12 {
   top: -3rem;
 }
 
 .-top-14 {
   top: -3.5rem;
+}
+
+.-top-32 {
+  top: -8rem;
 }
 
 .bottom-20 {
@@ -610,6 +614,10 @@ video {
   right: 0px;
 }
 
+.right-10 {
+  right: 2.5rem;
+}
+
 .right-20 {
   right: 5rem;
 }
@@ -626,14 +634,6 @@ video {
   top: 0px;
 }
 
-.top-20 {
-  top: 5rem;
-}
-
-.top-28 {
-  top: 7rem;
-}
-
 .top-32 {
   top: 8rem;
 }
@@ -642,32 +642,16 @@ video {
   top: 16rem;
 }
 
-.top-10 {
-  top: 2.5rem;
-}
-
-.-top-10 {
-  top: -2.5rem;
-}
-
-.right-10 {
-  right: 2.5rem;
-}
-
-.-top-32 {
-  top: -8rem;
-}
-
 .z-0 {
   z-index: 0;
 }
 
-.z-20 {
-  z-index: 20;
-}
-
 .z-10 {
   z-index: 10;
+}
+
+.z-20 {
+  z-index: 20;
 }
 
 .z-50 {
@@ -694,18 +678,6 @@ video {
 
 .mt-4 {
   margin-top: 1rem;
-}
-
-.-mt-32 {
-  margin-top: -8rem;
-}
-
-.-mt-64 {
-  margin-top: -16rem;
-}
-
-.-mt-48 {
-  margin-top: -12rem;
 }
 
 .flex {
@@ -740,20 +712,12 @@ video {
   height: 0.5rem;
 }
 
-.h-48 {
-  height: 12rem;
-}
-
 .h-5 {
   height: 1.25rem;
 }
 
-.h-56 {
-  height: 14rem;
-}
-
-.h-64 {
-  height: 16rem;
+.h-72 {
+  height: 18rem;
 }
 
 .h-8 {
@@ -762,10 +726,6 @@ video {
 
 .h-\[30rem\] {
   height: 30rem;
-}
-
-.h-72 {
-  height: 18rem;
 }
 
 .h-full {
@@ -790,10 +750,6 @@ video {
 
 .w-5 {
   width: 1.25rem;
-}
-
-.w-64 {
-  width: 16rem;
 }
 
 .w-80 {
@@ -900,11 +856,6 @@ video {
   background-color: rgb(244 114 182 / var(--tw-bg-opacity));
 }
 
-.bg-red-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
-}
-
 .bg-secondary-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(99 102 241 / var(--tw-bg-opacity));
@@ -919,26 +870,16 @@ video {
   background-color: rgb(255 255 255 / 0.2);
 }
 
-.bg-red-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 226 226 / var(--tw-bg-opacity));
-}
-
-.bg-red-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
+.bg-white\/10 {
+  background-color: rgb(255 255 255 / 0.1);
 }
 
 .bg-gradient-to-b {
   background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
 }
 
-.bg-gradient-to-br {
-  background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
-}
-
-.from-secondary-200\/10 {
-  --tw-gradient-from: rgb(199 210 254 / 0.1) var(--tw-gradient-from-position);
+.from-secondary-200\/5 {
+  --tw-gradient-from: rgb(199 210 254 / 0.05) var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(199 210 254 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
@@ -946,12 +887,6 @@ video {
 .from-secondary-500\/20 {
   --tw-gradient-from: rgb(99 102 241 / 0.2) var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(99 102 241 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.from-secondary-200\/5 {
-  --tw-gradient-from: rgb(199 210 254 / 0.05) var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(199 210 254 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
@@ -965,10 +900,6 @@ video {
 
 .p-4 {
   padding: 1rem;
-}
-
-.pb-20 {
-  padding-bottom: 5rem;
 }
 
 .pb-10 {
@@ -1019,27 +950,23 @@ video {
   color: rgb(229 229 229 / 0.8);
 }
 
-.opacity-30 {
-  opacity: 0.3;
-}
-
 .opacity-10 {
   opacity: 0.1;
 }
 
-.opacity-20 {
-  opacity: 0.2;
-}
-
-.shadow-md {
-  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.opacity-30 {
+  opacity: 0.3;
 }
 
 .shadow-lg {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-md {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -1073,12 +1000,22 @@ video {
   --tw-shadow: var(--tw-shadow-colored);
 }
 
+.backdrop-blur {
+  --tw-backdrop-blur: blur(8px);
+  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+}
+
 .transition {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
+}
+
+.duration-500 {
+  transition-duration: 500ms;
 }
 
 * {
@@ -1161,7 +1098,7 @@ body {
   padding-left: 0.75rem;
   padding-right: 1rem;
   text-transform: lowercase;
-  color: rgb(212 212 212 / 0.8);
+  color: rgb(255 255 255 / 0.8);
 }
 
 .nav-item:hover {
@@ -1238,9 +1175,8 @@ body {
   background-color: rgb(255 255 255 / 0.1);
 }
 
-.hover\:bg-gray-700:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
+.hover\:bg-gray-700\/30:hover {
+  background-color: rgb(55 65 81 / 0.3);
 }
 
 .focus\:outline-none:focus {
@@ -1254,42 +1190,13 @@ body {
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
-.focus\:ring-gray-600:focus {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(75 85 99 / var(--tw-ring-opacity));
+.focus\:ring-white\/30:focus {
+  --tw-ring-color: rgb(255 255 255 / 0.3);
 }
 
 @media (min-width: 768px) {
   .md\:absolute {
     position: absolute;
-  }
-
-  .md\:-top-48 {
-    top: -12rem;
-  }
-
-  .md\:-top-64 {
-    top: -16rem;
-  }
-
-  .md\:-top-80 {
-    top: -20rem;
-  }
-
-  .md\:-top-96 {
-    top: -24rem;
-  }
-
-  .md\:top-96 {
-    top: 24rem;
-  }
-
-  .md\:top-0 {
-    top: 0px;
-  }
-
-  .md\:top-80 {
-    top: 20rem;
   }
 
   .md\:top-48 {
@@ -1309,24 +1216,16 @@ body {
     margin-right: auto;
   }
 
-  .md\:mt-0 {
-    margin-top: 0px;
+  .md\:-mt-20 {
+    margin-top: -5rem;
   }
 
   .md\:-mt-64 {
     margin-top: -16rem;
   }
 
-  .md\:-mt-10 {
-    margin-top: -2.5rem;
-  }
-
-  .md\:-mt-16 {
-    margin-top: -4rem;
-  }
-
-  .md\:-mt-20 {
-    margin-top: -5rem;
+  .md\:mt-0 {
+    margin-top: 0px;
   }
 
   .md\:block {
@@ -1341,22 +1240,6 @@ body {
     display: none;
   }
 
-  .md\:h-\[30rem\] {
-    height: 30rem;
-  }
-
-  .md\:h-\[35rem\] {
-    height: 35rem;
-  }
-
-  .md\:h-\[38rem\] {
-    height: 38rem;
-  }
-
-  .md\:h-\[40rem\] {
-    height: 40rem;
-  }
-
   .md\:h-\[42rem\] {
     height: 42rem;
   }
@@ -1367,10 +1250,6 @@ body {
 
   .md\:w-auto {
     width: auto;
-  }
-
-  .md\:w-\[30rem\] {
-    width: 30rem;
   }
 
   .md\:w-full {
@@ -1410,32 +1289,28 @@ body {
     position: absolute;
   }
 
-  .lg\:relative {
-    position: relative;
+  .lg\:-left-20 {
+    left: -5rem;
   }
 
   .lg\:-right-20 {
     right: -5rem;
   }
 
+  .lg\:right-20 {
+    right: 5rem;
+  }
+
   .lg\:top-20 {
     top: 5rem;
-  }
-
-  .lg\:top-32 {
-    top: 8rem;
-  }
-
-  .lg\:-left-20 {
-    left: -5rem;
   }
 
   .lg\:top-28 {
     top: 7rem;
   }
 
-  .lg\:right-20 {
-    right: 5rem;
+  .lg\:top-32 {
+    top: 8rem;
   }
 
   .lg\:col-span-1 {
@@ -1468,48 +1343,20 @@ body {
     height: 30rem;
   }
 
-  .lg\:h-\[35rem\] {
-    height: 35rem;
-  }
-
-  .lg\:h-full {
-    height: 100%;
-  }
-
-  .lg\:h-\[45rem\] {
-    height: 45rem;
-  }
-
-  .lg\:h-\[40rem\] {
-    height: 40rem;
-  }
-
-  .lg\:h-\[43rem\] {
-    height: 43rem;
-  }
-
   .lg\:h-\[41rem\] {
     height: 41rem;
+  }
+
+  .lg\:w-\[35rem\] {
+    width: 35rem;
   }
 
   .lg\:w-\[45rem\] {
     width: 45rem;
   }
 
-  .lg\:w-\[50rem\] {
-    width: 50rem;
-  }
-
   .lg\:w-full {
     width: 100%;
-  }
-
-  .lg\:w-\[40rem\] {
-    width: 40rem;
-  }
-
-  .lg\:w-\[35rem\] {
-    width: 35rem;
   }
 
   .lg\:grid-cols-3 {
