--- a/index.css
+++ b/index.css
@@ -22,6 +22,10 @@ body {
     @apply max-w-[1380px] mx-auto
 }
 
+.title {
+    @apply text-3xl md:text-4xl text-neutral-200/80 font-medium
+}
+
 /* navbar */
 .nav-logo-name {
     @apply self-center text-lg md:text-xl lg:text-2xl font-semibold whitespace-nowrap text-white
@@ -45,4 +49,25 @@ body {
 .btn-outline {
     @apply ring-secondary-400 bg-transparent hover:bg-white/10 duration-500 shadow-md
         shadow-secondary-500
+}
+
+/* products */
+.products {
+    @apply grid md:grid-cols-2 lg:grid-cols-3 gap-14 lg:gap-8
+}
+
+.products .item {
+    @apply px-6 pt-20 pb-10 rounded-xl shadow-lg bg-gradient-to-b from-secondary-200/10 to-neutral-900/5
+}
+
+.products .item .top-card {
+    @apply flex items-center justify-center -mt-28 mb-10
+}
+
+.products .title {
+    @apply text-xl font-semibold text-center text-neutral-100/80 mb-6
+}
+
+.products .content {
+    @apply text-center text-neutral-300/70
 }
